Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,5 +43,6 @@ steps:
     sourceImageName: 'pastafyfront'
     sourceImageTag: '$(Build.BuildId)'
     repositoryName: 'pastafyfront'
+    pushTag: '$(Build.BuildId)'
     logResponse: true
     
