Front dockerfile update.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ trigger:
         - master
     paths:
         include:
-        - src/Front*
+        - pastafy/frontend*
 
 pool:
   vmImage: 'ubuntu-latest'
