--- a/DockerfileFront
+++ b/DockerfileFront
@@ -1,20 +1,15 @@
-# pull official base image
-FROM node:13.12.0-alpine
-
-# set working directory
+FROM node:13.12.0-alpine as build
 WORKDIR /app
-
-# add `/app/node_modules/.bin` to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
-
-# install app dependencies
 COPY ./pastafy/frontend/package.json ./
 COPY ./pastafy/frontend/package-lock.json ./
-RUN npm install --silent
+RUN npm ci --silent
 RUN npm install react-scripts@3.4.1 -g --silent
+COPY ./pastafy/frontend/ ./
+RUN npm run build
 
-# add app
-COPY ./pastafy/frontend ./
-
-# start app
-CMD ["npm", "start"]
+# production environment
+FROM nginx:stable-alpine
+COPY --from=build /app/build /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
